--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "noImplicitAny": true, // Подсвечивает все места где не указан тип
     "module": "es6",
     "target": "es5", // В какую спецификацию компилируем
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": true, // компилятор будет обрабатывать не только TS файлы, но и JS файлы
     "moduleResolution": "node",
     "esModuleInterop": true,
