--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:vite": "vite",
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
+    "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production apiUrl=https://production-project-server-nx8v5fz5g-ilyas-projects-a7d2530b.vercel.app",
     "build:dev": "webpack --env mode=development",
@@ -66,6 +68,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "@vitejs/plugin-react": "^4.1.1",
     "babel-loader": "^8.3.0",
     "circular-dependency-plugin": "^5.2.2",
     "concurrently": "^7.0.0",
@@ -101,6 +104,8 @@
     "ts-morph": "^20.0.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
+    "vite": "^4.5.0",
+    "vite-plugin-svgr": "^2.2.1",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
