--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "prepare": "husky install",
     "generate:slice": "node ./scripts/createSlice/index.js"
   },
+  "lint-staged": {
+    "**/*.{ts,tsx}": "eslint",
+    "**/*.scss": "npx stylelint"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/demos461/blog.git"
@@ -92,6 +96,7 @@
     "jest": "^27.5.1",
     "jest-html-reporters": "^3.1.4",
     "json-server": "^0.17.0",
+    "lint-staged": "^15.1.0",
     "loki": "^0.32.0",
     "mini-css-extract-plugin": "^2.5.3",
     "reg-cli": "^0.17.6",
