--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
-    "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "storybook:build": "build-storybook -c ./config/storybook",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "storybook:build": "storybook build -c ./config/storybook",
     "prepare": "husky install",
     "generate:slice": "node ./scripts/createSlice/index.js"
   },
   "lint-staged": {
-    "**/*.{ts,tsx}": "eslint",
-    "**/*.scss": "npx stylelint"
+    "**/*.{ts,tsx}": "eslint"
   },
   "repository": {
     "type": "git",
@@ -49,14 +48,16 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-interactions": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/builder-webpack5": "^6.4.19",
-    "@storybook/manager-webpack5": "^6.4.19",
-    "@storybook/react": "^6.4.19",
-    "@storybook/testing-library": "^0.0.9",
+    "@storybook/addon-actions": "^7.5.3",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-themes": "^7.5.3",
+    "@storybook/builder-webpack5": "^7.5.3",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^7.5.3",
+    "@storybook/react-webpack5": "^7.5.3",
+    "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^14.1.2",
@@ -70,8 +71,8 @@
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "@vitejs/plugin-react": "^4.1.1",
     "babel-loader": "^8.3.0",
     "circular-dependency-plugin": "^5.2.2",
@@ -97,14 +98,13 @@
     "jest-html-reporters": "^3.1.4",
     "json-server": "^0.17.0",
     "lint-staged": "^15.1.0",
-    "loki": "^0.32.0",
+    "loki": "^0.33.1",
     "mini-css-extract-plugin": "^2.5.3",
     "reg-cli": "^0.17.6",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
-    "storybook-addon-mock": "^2.4.1",
-    "storybook-addon-themes": "^6.1.0",
+    "storybook-addon-mock": "^4.3.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
@@ -113,7 +113,7 @@
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "vite": "^4.5.0",
-    "vite-plugin-svgr": "^2.2.1",
+    "vite-plugin-svgr": "^4.2.0",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
@@ -121,7 +121,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@reduxjs/toolkit": "^1.8.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^0.26.1",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^6.1.3",
@@ -130,7 +130,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
-    "react-redux": "^7.2.6",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.2.1"
   },
   "loki": {
